haproxy/cluster2-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: cluster2-ingress-service
subsets:
  - addresses:
      - ip: 119.28.179.203
    ports:
      - port: 80
