haproxy/cluster3-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: cluster3-ingress-service
subsets:
  - addresses:
      - ip: 43.128.11.92
    ports:
      - port: 80
